primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Agent_Captured_Profile__c/Agent_Captured_Profile__c.object-meta.xml
<CustomObject>
    <label>Agent Captured Profile</label>
    <nameField>
        <displayFormat>ACP-{0000}</displayFormat>
        <label>Agent Captured Profile Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Agent Captured Profiles</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>