primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Agent_Captured_Profile__c/fields/Captured_From__c.field-meta.xml
<CustomField>
    <fullName>Captured_From__c</fullName>
    <label>Captured From</label>
    <length>255</length>
    <type>Text</type>
</CustomField>