primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Agent_Captured_Profile__c/fields/Confidence__c.field-meta.xml
<CustomField>
    <fullName>Confidence__c</fullName>
    <label>Confidence</label>
    <length>50</length>
    <type>Text</type>
</CustomField>