primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Agent_Captured_Profile__c/fields/Data_Type__c.field-meta.xml
<CustomField>
    <fullName>Data_Type__c</fullName>
    <label>Data Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>