primo-brands-hydration-demo/salesforce/force-app/main/default/objects/Agent_Captured_Profile__c/fields/Field_Value__c.field-meta.xml
<CustomField>
    <fullName>Field_Value__c</fullName>
    <label>Field Value</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>